--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "type": "module",
   "devDependencies": {
     "jest": "^26.6.3"
-    
   },
   "scripts": {
     "test": "jest"
@@ -24,6 +23,7 @@
     "id": 202131081
   },
   "dependencies": {
-    "axios": "^1.2.0"
+    "axios": "^1.2.0",
+    "dotenv": "^16.0.3"
   }
 }
